﻿drkns 08.02.2016 01:30:51 +0200 - build 4544

1. После 4320 иногда неадекватно работало выделение после Ctrl-A.

drkns 07.02.2016 18:30:10 +0200 - build 4543

1. Переход к колонке по Alt-F8 во вьювере не работал, если первый параметр был указан в процентах (пример из справки).

2. Мелкий рефакторинг. %очередная мантра о том, что однобуквенные переменные плохо влияют на вашу карму%.

3. Warnings.

drkns 06.02.2016 04:01:40 +0200 - build 4542

1. 0003169: исчезают панели при запуске внешнего редактора

drkns 05.02.2016 21:26:41 +0200 - build 4541

1. Уточнение 4525.

drkns 05.02.2016 09:41:13 +0200 - build 4540

1. С форума: Пропадает курсор в запущенных внешних консольных приложениях.

drkns 03.02.2016 19:25:05 +0200 - build 4539

1. Передвинем хак для M#2922 в более подходящее место и упростим его.

w17 03.02.2016 17:48:03 +0300 - build 4538

1. Уточнение 4537.

w17 03.02.2016 16:10:50 +0300 - build 4537

1. M#2922: символьная ссылка на исполняемый файл создает отдельную консоль при запуске

drkns 03.02.2016 09:11:50 +0200 - build 4536

1. Восстановим поведение выделения в диалогах как до 4484.

drkns 02.02.2016 22:19:45 +0200 - build 4535

1. С форума: запуск far /v или far /e при включенном автосохранении сбивал настройки панелей.

drkns 02.02.2016 21:34:08 +0200 - build 4534

1. Уточнение 4525 для нетривиальных условий запуска.

drkns 02.02.2016 21:17:56 +0200 - build 4533

1. Адаптация граббера к 4526.

drkns 02.02.2016 19:55:16 +0200 - build 4532

1. С форума: в одном из билдов 4482-4484 сломался Editor.SetStr

drkns 02.02.2016 09:55:00 +0200 - build 4531

1. При удалении элемента из списка дополнения не обновлялось содержимое комстроки.

drkns 01.02.2016 23:00:10 +0200 - build 4530

1. Оптимизация 4525 для System.WindowMode = true

2. System.WindowMode теперь true по умолчанию, ибо:
   - это хорошо;
   - нужно тестирование.

w17 01.02.2016 16:53:33 +0300 - build 4529

1. M#3161: Extend GoTo (AltF8)

drkns 01.02.2016 10:34:36 +0200 - build 4528
