@@ -933,7 +933,7 @@ public:
 		Global->CtrlObject->Desktop->TakeSnapshot();
 		Global->WindowManager->SubmergeWindow(Global->CtrlObject->Desktop);
 		Global->WindowManager->ActivateWindow(m_CurrentWindow);
-		Global->WindowManager->RefreshAll();
+		Global->WindowManager->ResizeAllWindows();
 		--Global->ProcessShowClock;
 	}
 
