@@ -1,4 +1,8 @@
-﻿drkns 08.02.2016 01:30:51 +0200 - build 4544
+﻿drkns 09.02.2016 22:33:44 +0200 - build 4545
+
+1. Рефакторинг.
+
+drkns 08.02.2016 01:30:51 +0200 - build 4544
 
 1. После 4320 иногда неадекватно работало выделение после Ctrl-A.
 
